[project]
name = "breppy"
version = "0.0.3"
description = "Make tracker requests"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["requests", "make", "build", "add"]

authors = [
	{name = "brokedarius", email = "-@-.org" }
]

maintainers = [
	{name = "brokedarius", email = "-@-.org" }
]

classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Build Tools",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
]

dependencies = [
"requests",
"urllib3",
"charset-normalizer",
"msgspec",
"rich",
"beautifulsoup4",
"platformdirs",
"tomlkit"
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"breppy" = ["__main__.pyi", "py.typed"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"